<resources>
    <string name="app_name">FilterApp</string>
    <string name="empty"></string>
    <string name="open">Open</string>
    <string name="apply">Apply</string>
    <string name="save">Save</string>
    <string name="reuse">Reuse</string>
    <string name="main">Main</string>
    <string name="filter_settings">Filter Settings</string>
    <string name="settings">Settings</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="preview">Preview</string>
</resources>