<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <LinearLayout
        android:id="@+id/tabRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/toAppSettingsScreenBtn"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/secondary"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/settings"
            android:textAlignment="center"
            android:textIsSelectable="false"
            android:textScaleX="1"
            android:textSize="14sp"
            android:visibility="gone"
            app:cornerRadius="0dp" />

        <Button
            android:id="@+id/toMainScreenBtn"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/tertiary"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/main"
            android:textAlignment="center"
            android:textIsSelectable="false"
            android:textScaleX="1"
            android:textSize="14sp"
            app:cornerRadius="0dp" />

        <Button
            android:id="@+id/toFilterSettingsScreenBtn"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/secondary"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/filter_settings"
            android:textAlignment="center"
            android:textIsSelectable="false"
            android:textScaleX="1"
            android:textSize="14sp"
            app:cornerRadius="0dp" />

    </LinearLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/screen"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabRow">


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>