<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/actionRows"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:color/transparent"
        tools:srcCompat="@mipmap/ic_launcher" />

    <LinearLayout
        android:id="@+id/actionRows"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/imageLoadBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/actionRow1"
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:orientation="horizontal"
            android:padding="0dp">

            <Button
                android:id="@+id/openImageButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2sp"
                android:layout_marginStart="2sp"
                android:layout_marginLeft="2sp"
                android:layout_weight="1"
                android:backgroundTint="@color/primary"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/open"
                android:textColor="@color/white"
                app:cornerRadius="100sp" />

            <Button
                android:id="@+id/applyButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2sp"
                android:layout_marginStart="2sp"
                android:layout_marginLeft="2sp"
                android:layout_weight="1"
                android:backgroundTint="@color/secondary"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/apply"
                android:textColor="@color/white"
                app:cornerRadius="100sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/actionRow2"
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:orientation="horizontal"
            android:padding="0dp">

            <Button
                android:id="@+id/reuseButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="2sp"
                android:layout_marginStart="2sp"
                android:layout_marginLeft="2sp"
                android:layout_weight="1"
                android:backgroundTint="@color/secondary"
                android:insetLeft="0dp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/reuse"
                android:textColor="@color/white"
                android:visibility="gone"
                app:cornerRadius="100sp" />

            <Button
                android:id="@+id/saveButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="2sp"
                android:layout_marginStart="2sp"
                android:layout_marginLeft="2sp"
                android:layout_weight="1"
                android:backgroundTint="@color/secondary"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/save"
                android:textColor="@color/white"
                app:cornerRadius="100sp" />
        </LinearLayout>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/imageLoadBar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
